Modernize filter4 DemoController string formatting
Agent-Logs-Url: https://github.com/Waffle/waffle/sessions/48d6eead-a29e-43f8-9ac6-26c3277c7c4e

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>